# matching-engine-cpp

./: .gitattributes  .gitignore  .mailmap  CMakeLists.txt  README.md
include/: checksum.hpp  gateway.hpp  json.hpp  matching_engine.hpp  net.hpp  object_pool.hpp  protocol.hpp  recovery.hpp  risk.hpp  sharded.hpp  spsc_queue.hpp  symbol_table.hpp  threaded_engine.hpp  types.hpp
src/: json.cpp  main.cpp  matching_engine.cpp  net.cpp  protocol.cpp  recovery.cpp  sharded.cpp
tests/: test_engine.cpp
